fix: add overflow for popup

--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -11,6 +11,9 @@
   font-size: 14px;
   line-height: 121%;
   color: #000000;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .form__item:last-of-type {
